src/components/Cards/Cards.scss
@import "../../common/colors";
@import "../../common/text";
@import "../../common/variables";

.cards-wrapper {
  overscroll-behavior: contain contain;

  .cards-inner-wrapper {
    overflow-y: auto;
    width: 100%;
    padding: 10px 0;
    display: flex;
    height: 120px;
    margin-bottom: 20px;
    overscroll-behavior: contain contain;


    .card-container {
      margin-right: 10px;
      cursor: move;
      .card-details {
        margin: 0 10px;
      }
    }

    &::-webkit-scrollbar {
      height: 5px;
    }
    &::-webkit-scrollbar-track {
      background: transparent;
    }
    &::-webkit-scrollbar-thumb {
      background: #FF9D14;
    }
    &::-webkit-scrollbar-thumb:hover {
      background: #d8840e;
    }
  }

  .card-tabs-wrapper {
    display: flex;
    height: 15px;
    margin: 0 13px;
    position: relative;
    &:before, &:after {
      position: absolute;
      content: '';
      display: block;
      height: 13px;
      width: 13px;
      border-bottom: 1px solid #312853;
      box-sizing: border-box;
    }
    &:before {
      left: -13px;
    }
    &:after {
      right: -13px;
    }
    .tab {
      flex: 1 1 200px;
      border-top: 1px solid #312853;
      border-bottom: 1px solid #312853;
      margin: 0 13px;
      height: 13px;
      font-size: 8px;
      color: white;
      text-align: center;
      font-family: $font-secondary;
      text-transform: uppercase;
      cursor: pointer;
      position: relative;
      box-sizing: border-box;
      &:before, &:after {
        position: absolute;
        top: -1px;
        content: '';
        display: block;
        height: 13px;
        width: 13px;
        border-bottom: 1px solid #312853;
        box-sizing: border-box;
      }
      &:before {
        left: -7px;
        border-left: 1px solid #312853;
        transform: skewX(-45deg);
      }
      &:after {
        right: -7px;
        border-right: 1px solid #312853;
        transform: skewX(45deg);
      }
      &.active {
        line-height: 20px;
        font-size: 10px;
        &, &:before, &:after {
          border-bottom: 0;
        }
      }
    }
  }

  .loading-cards, .no-cards {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    font-size: 16px;
    color: white;
    span {
      font-family: $font-secondary;
      margin-right: 15px;
    }
  }


  .card-details:not(:last-child) {
    margin-right: 20px;
  }

  .location-card-wrapper {
    cursor: pointer;
  }

  .card-type-wrapper {
    display: flex;
    .card-type-title-wrapper {
      width: 20px;
      border-right: 1px solid #36265F;
      margin-right: 20px;
      height: 90px;
      position: relative;
      .card-type-title {
        font-family: $font-secondary;
        position: absolute;
        bottom: -7px;
        height: 0;
        transform: rotate(-90deg);
        transform-origin: top left;
        color: white;
        font-size: 10px;
        letter-spacing: .04em;
        text-transform: uppercase;
      }
    }
  }
}

